feat(mail): 实现真正的邮件收发功能
- 新增 6 个 JPA Entity (MailAccount/MailFolder/MailRecipient/MailAttachment/Contact/MailPushEvent)
- 新增 6 个 MyBatis-Plus Mapper 接口
- 新增 MailSenderService: 通过 JavaMailSender 真正发送 SMTP 邮件
- 新增 MailSyncService: 通过 Jakarta Mail IMAP 同步收件箱
- 新增 MailAccountService/MailFolderService/ContactService/AttachmentService
- 重写所有 Controller: 使用新 Service 替代 DemoMailboxService
- 删除 DemoMailboxService (纯内存 Mock)
- 启用 @EnableScheduling 定时 IMAP 同步
- API 路径和响应格式保持不变，前端无需修改