@@ -1,26 +1,26 @@
 package com.example.emailsystem.controller;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.example.emailsystem.common.ApiResponse;
 import com.example.emailsystem.dto.AppDtos.PluginStatusResponse;
 import com.example.emailsystem.dto.AppDtos.PushEventResponse;
+import com.example.emailsystem.entity.MailPushEvent;
 import com.example.emailsystem.intelligence.dto.IntelligenceAnalysisResult;
 import com.example.emailsystem.intelligence.dto.ThreatIndicator;
 import com.example.emailsystem.intelligence.service.IntelligenceAnalysisService;
-import com.example.emailsystem.service.DemoMailboxService;
+import com.example.emailsystem.mapper.MailPushEventMapper;
+import com.example.emailsystem.security.SecurityUtils;
+import java.time.ZoneId;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @RequestMapping("/intelligence")
 public class IntelligenceController {
     private final IntelligenceAnalysisService intelligenceAnalysisService;
-    private final DemoMailboxService mailboxService;
+    private final MailPushEventMapper mailPushEventMapper;
     private final String pluginName;
     private final String pluginVersion;
     private final boolean pluginEnabled;
@@ -28,14 +28,14 @@ public class IntelligenceController {
 
     public IntelligenceController(
         IntelligenceAnalysisService intelligenceAnalysisService,
-        DemoMailboxService mailboxService,
+        MailPushEventMapper mailPushEventMapper,
         @Value("${intelligence.plugin.name}") String pluginName,
         @Value("${intelligence.plugin.version}") String pluginVersion,
         @Value("${intelligence.plugin.enabled}") boolean pluginEnabled,
         @Value("${intelligence.plugin.timeout-ms}") int timeoutMs
     ) {
         this.intelligenceAnalysisService = intelligenceAnalysisService;
-        this.mailboxService = mailboxService;
+        this.mailPushEventMapper = mailPushEventMapper;
         this.pluginName = pluginName;
         this.pluginVersion = pluginVersion;
         this.pluginEnabled = pluginEnabled;
@@ -54,25 +54,45 @@ public class IntelligenceController {
 
     @GetMapping("/threats")
     public ApiResponse<List<ThreatIndicator>> threats() {
-        return ApiResponse.ok(mailboxService.listPushEvents().stream()
-            .map(event -> new ThreatIndicator("message", String.valueOf(event.messageId()), event.priority(), event.content()))
-            .toList());
+        List<MailPushEvent> events = mailPushEventMapper.selectList(
+            new QueryWrapper<MailPushEvent>()
+                .eq("user_id", SecurityUtils.currentUser().id())
+                .orderByDesc("created_at"));
+        return ApiResponse.ok(events.stream()
+            .map(e -> new ThreatIndicator(e.getEventType(), String.valueOf(e.getMessageId()),
+                e.getPriority(), e.getContent()))
+            .collect(Collectors.toList()));
     }
 
     @GetMapping("/push-events")
     public ApiResponse<List<PushEventResponse>> pushEvents() {
-        return ApiResponse.ok(mailboxService.listPushEvents());
+        List<MailPushEvent> events = mailPushEventMapper.selectList(
+            new QueryWrapper<MailPushEvent>()
+                .eq("user_id", SecurityUtils.currentUser().id())
+                .orderByDesc("created_at"));
+        return ApiResponse.ok(events.stream().map(this::toPushEvent).collect(Collectors.toList()));
     }
 
     @PutMapping("/push-events/{id}/read")
     public ApiResponse<PushEventResponse> markPushEventRead(@PathVariable Long id) {
-        return ApiResponse.ok(mailboxService.markPushEventRead(id));
+        MailPushEvent event = mailPushEventMapper.selectById(id);
+        if (event != null) {
+            event.setReadFlag(1);
+            mailPushEventMapper.updateById(event);
+        }
+        return ApiResponse.ok(toPushEvent(event));
     }
 
     @GetMapping("/plugins")
     public ApiResponse<List<PluginStatusResponse>> plugins() {
         return ApiResponse.ok(List.of(new PluginStatusResponse(
-            pluginName, pluginVersion, "java-rule-fallback", pluginEnabled, timeoutMs, "ready"
-        )));
+            pluginName, pluginVersion, "java-rule-fallback", pluginEnabled, timeoutMs, "ready")));
+    }
+
+    private PushEventResponse toPushEvent(MailPushEvent e) {
+        if (e == null) return null;
+        return new PushEventResponse(e.getId(), e.getMessageId(), e.getEventType(), e.getTitle(),
+            e.getContent(), e.getPriority(), e.getReadFlag() == 1,
+            e.getPushedAt() != null ? e.getPushedAt().atZone(ZoneId.systemDefault()).toOffsetDateTime() : null);
     }
 }
